# quick-quotes

./: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  complete_validate.py  fixtures.py  main.py  nodes.py  pyproject.toml  quote_spec.py  run_demo.py  schema.py
api/: main.py
quickquotes/: __init__.py  extraction.py  fixtures.py  graph.py  nodes.py
tests/: test_extraction.py  test_validate.py
ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  api.ts  styles.css  types.ts
ui/src/components/: Panels.tsx  ProvenanceBadge.tsx  SpecPanel.tsx
