[project]
name = "quick-quotes"
version = "0.1.0"
description = "Quick Quotes — agentic quote intake for corrugated box plants (Vista case study MVP)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "pydantic>=2",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# distribution name has a hyphen; the import package does not
[tool.hatch.build.targets.wheel]
packages = ["quickquotes"]
